--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,7 +1,12 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
 }
+
 
 .logo {
   font-size: 48px;
@@ -14,10 +19,15 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  flex-direction: row;
+
 }
 
 a {
   font-size: 22px;
+  margin: 2px;
   background: white;
   padding: 8px;
   /* this removes the line under the links */
