--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -7,9 +8,17 @@ img {
   height: 100px;
 }
 
+.plant {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +32,24 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.barberry {
+  text-wrap: wrap;
+  width: 200px;
+}
+
+.chilli {
+  text-wrap: wrap;
+  width: 200px;
+}
+
+.pepper {
+  text-wrap: wrap;
+  width: 200px;
+}
+
+.saffron {
+  text-wrap: wrap;
+  width: 200px;
 }
