--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -2,20 +2,29 @@
 
 body {
   height: 100vh;
-  margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  list-style-type: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
 }
 
 img {
   width: 600px;
+  margin: 0px 0px 12px;
 }
 
 button {
+  flex-direction: row;
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
+  margin: 10px 0px;
 }
 
 input {
@@ -23,4 +32,42 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  padding: 0 2px 2px 2px;
+}
+
+a {
+  padding: 16px;
+  text-decoration: none;
+  color: gray;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #eee;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+}
+
+.content {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
