--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,15 +2,24 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  flex-direction: column;
+  display: flex;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
 }
 
 .footer {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   height: 72px;
   background: #eee;
   color: darkmagenta;
@@ -20,10 +29,29 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
 }
 
 .card {
   border: 1px solid #eee;
+  width: 300px;
+  height: 300px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
+  border-radius: 20px;
+  text-align: center;
+  align-content: center;
+  padding: 50px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+
+
+}
+
+.mid {
+  display: flex;
+  flex-direction: row;
+
 }
